# cvc5

./: .clang-tidy  CMakeLists.txt  COPYING  INSTALL.rst  configure.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  cross_compilation.yml  gpl-linux-arm64.yml  package_pypi.yml  package_pypi2.yml  pythonic_issue.yml  static_analysis.yml  wheels.yml
cmake/: ConfigDebug.cmake  FindCLN.cmake  FindCaDiCaL.cmake  FindCoCoA.cmake  FindCython.cmake  FindGLPK.cmake  FindGMP.cmake  FindPip.cmake  FindPoly.cmake  FindSetuptools.cmake  Helpers.cmake  Toolchain-aarch64.cmake  Toolchain-clang64.cmake  install_python_wheel.cmake  update_rpath_macos.cmake  version-base.cmake  version-base.cmake.template  version.cmake
cmake/deps-utils/: Poly-windows-patch.sh  libpoly.patch
contrib/: aarch64-gpl.Dockerfile  arm64-gpl.Dockerfile  cibw_before_all_linux.sh  cibw_before_all_macos.sh  cibw_before_all_windows.sh  format-code.sh  requirements_python_dev.txt
contrib/cibw/: before_all_linux.sh  before_all_macos.sh  before_all_windows.sh
contrib/packaging_python/: mk_clean_wheel.sh  mk_wheel.py
examples/: CMakeLists.txt
examples/fetchcontent-demo/: CMakeLists.txt  README.md
include/cvc5/: cvc5.h
sandbox/: logic-bug.smt2
src/: CMakeLists.txt
src/base/: CMakeLists.txt  check.cpp  check.h  exception.cpp  exception.h
src/context/: cdhashset.h  context_mm.h
src/decision/: justification_strategy.cpp
src/expr/: aci_norm.cpp  dtype.h  node.h  (+31 more)
test/: CMakeLists.txt
wheel/: cvc5kinds.pxd  cvc5kinds.pxi  cvc5proofrules.pxd  cvc5proofrules.pxi  cvc5types.pxd  cvc5types.pxi
(+359 files in other folders)
